--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,5 +1,5 @@
 <hgroup>
-<h1><a href="{{ root_url }}/"><img src=images/logo.png width="100px" heigth="96px">{{ site.title }}</a></h1>
+<h1><a href="{{ root_url }}/"><img src=images/logo.png width="100px" heigth="96px"><span >{{ site.title }}</span></a></h1>
   {% if site.subtitle %}
     <h2>{{ site.subtitle }}</h2>
   {% endif %}
