--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,6 +1,5 @@
-<hgroup>
-<h1><a href="{{ root_url }}/"><img src=images/logo.png width="100px" heigth="96px"><span >{{ site.title }}</span></a></h1>
-  {% if site.subtitle %}
-    <h2>{{ site.subtitle }}</h2>
-  {% endif %}
-</hgroup>
+<a href="{{ root_url }}/"><img src=images/logo.png width="100px" heigth="96px"></a>
+<h1><a href="{{ root_url }}/">{{ site.title }}</a></h1>
+{% if site.subtitle %}
+<h2>{{ site.subtitle }}</h2>
+{% endif %}
