--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -1,2 +1,9 @@
 // This File is imported last, and will override other styles in the cascade
 // Add styles here to make changes without digging in too much
+body > header {
+  padding-bottom: 0;
+  h1 {
+    vertical-align: middle;
+    padding: 0 0 60px 30px;
+  }
+}
