use theme slash

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -2,8 +2,7 @@
 // Add styles here to make changes without digging in too much
 body > header {
   padding-bottom: 0;
-  h1 {
-    vertical-align: middle;
-    padding: 0 0 60px 30px;
+  h1 img{
+      margin-top: -10px;
   }
 }
