--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -1,6 +1,5 @@
 <h1>
-    <a href="{{ root_url }}"><img src="images/logo.png" width="150px" height="53px"></a>
-    <!--a href="{{ root_url }}/">{{ site.title }}</a-->
+    <a href="{{ root_url }}/"><img src="{{ root_url }}/images/logo.png" width="150px" height="53px"></a>
 </h1>
 <nav id="main-nav">{% include navigation.html %}</nav>
 <nav id="mobile-nav">
