--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,8 +1,6 @@
 <hgroup>
   <div id="logo">
-  	<div id="logoLeft">{</div>
-  	<div id="logoText">mob</div>
-  	<div id="logoRight">}</div>
+    <div id="logoText"><img src="{{root_url}}/images/logo.png"></div>
   	<div class="clear"></div>
   </div>
   <h1><a href="{{ root_url }}/">{{ site.title }}</a></h1>
