change tag style

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -10,3 +10,11 @@ body > header {
   }
 }
 
+article .meta .categories a {
+  color: #b1b1b1;
+  font-size: 13px;
+  text-decoration: none;
+  &:hover {
+    text-decoration: none;
+  }
+}
