--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -35,5 +35,5 @@
 <div class="entry-content">{{ content }}</div>
 {% endif %}
 {% if post.categories or page.categories %}
-<p class="meta">tags: {% include post/categories.html %}</p>
+<p class="meta">{% include post/categories.html %}</p>
 {% endif %}
