--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -14,6 +14,7 @@ article .meta .categories a {
   color: #b1b1b1;
   font-size: 13px;
   text-decoration: none;
+  margin-right: 5px;
   &:hover {
     text-decoration: none;
   }
