--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -2,8 +2,8 @@ body > header {
   padding-left:0;
   h1 {
     display: inline-block;
-    margin: 0;
-    font-size: 2.7em;
+    margin: 10px;
+    font-size: 3.5em;
     padding-left: 0.1em;
     text-shadow: rgba(0, 0, 0, 0.8) 0 0 8px;
     float: left;
@@ -21,7 +21,7 @@ body > header {
     }
   }
   div#logo{
-    margin-top: 0.58em;
+    margin-top: 0;
     font-size: 1.9em;
     color: #f9f9f9;
   }
