--- a/sass/partials/_blog.scss
+++ b/sass/partials/_blog.scss
@@ -1,7 +1,16 @@
 article {
+  .meta .categories a {
+    color: #b1b1b1;
+    font-size: 13px;
+    text-decoration: none;
+    margin-right: 5px;
+    &:hover {
+      text-decoration: none;
+    }
+  }
   padding-top: 1em;
   a { @extend .force-wrap; }
-  p{
+  p {
     text-align:justify;
     margin-bottom: 1em;
   }
