--- a/_sass/jekyll-theme-tactile.scss
+++ b/_sass/jekyll-theme-tactile.scss
@@ -341,6 +341,12 @@ footer a:hover {
 * html .clearfix {height: 1%;}
 .clearfix {display: block;}
 
+#logo {
+  padding-top: 15px;
+  padding-bottom: 5px;
+  padding-right: 15px;
+  float: left;
+}
 /* #Media Queries
 ================================================== */
 
@@ -354,7 +360,7 @@ footer a:hover {
 @media only screen and (max-width: 767px) {
   header {
     padding-top: 10px;
-    padding-bottom: 10px;
+    padding-bottom: 5px;
   }
   #downloads {
     margin-bottom: 25px;
